[metadata]
name = skt-dl
version = attr: skt_dl.__version__
description = A custom YouTube video and playlist downloader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/example/skt-dl
author = skt-dl developers
author_email = skt-dl@example.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Multimedia :: Video
    Topic :: Internet
keywords = youtube, downloader, video, playlist, subtitle, thumbnail, concurrent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.25.0
    flask>=2.0.0
    flask-sqlalchemy>=3.0.0
    gunicorn>=20.1.0
    werkzeug>=2.0.0

[options.entry_points]
console_scripts =
    skt-dl = skt_dl.cli:main
    skt-dl-web = skt_dl.web:run_app
    
[options.package_data]
skt_dl = 
    py.typed
    
[options.packages.find]
exclude =
    tests
    examples
    docs

[bdist_wheel]
universal = 1